--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/*
+
+NAV
+
+*/
 
 .nav__row {
     display: flex;
@@ -6,12 +11,13 @@
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
-    
+    border: 5px solid purple;
+
 }
 
 
 img {
-height: 50px;
+    height: 50px;
 
 }
 
@@ -19,14 +25,73 @@ h1 {
     padding-left: 10px;
 }
 
-ul { 
-    display: flex;
-    margin-left: 900px;
-    list-style-type: none;
-    
+.nav__logo--wrapper {
 
-   
-    
-    
+    display: flex;
+    align-items: center;
 }
 
+.nav__links--wrapper {
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.nav__list--wrapper {
+    width: 60%;
+
+}
+
+a {
+    text-decoration: none;
+
+
+}
+
+li {
+    list-style-type: none;
+
+}
+
+.nav__button {
+    padding: 10px 15px;
+    background-color: purple;
+    border-radius: 15px;
+
+
+}
+
+.sign--up--button {
+    color: white;
+}
+
+/*
+
+HEADER
+
+*/
+
+.header__row {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.header__description--wrapper {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 150px;
+}
+
+.header__img--wrapper {
+    width: 60%;
+}
+ 
+img {
+    width: 100%;
+}
