--- a/style.css
+++ b/style.css
@@ -136,16 +136,20 @@ SECTION 1
 
 }
 
+
+
+
 .feature {
-    max-width: 350px;
+    width: 40%;
+    margin: 0 auto;
 }
 
 .boxes {
     margin: 0 auto;
-    justify-content: center;
+    grid-template-columns: repeat(3, 1fr);
     max-width: 1200px;
     flex-wrap: wrap;
-    display: flex;
+    display: grid;
     }
 
     .title {
@@ -157,11 +161,9 @@ SECTION 1
     }
 
     .title__para {
-        max-width: 45%;
         display: flex;
         align-items: right;
         font-size: 15px;
-        margin: 0 auto;
         padding-bottom: 30px;
     }
 
@@ -172,7 +174,7 @@ SECTION 1
 
     .title__header--para {
         font-size: 17px;
-        max-width: 45%;
+        max-width: 25%;
         padding-bottom: 50px;
     }
 
@@ -181,3 +183,31 @@ SECTION 1
         color: rgb(94, 5, 142);
         
     }
+
+    .feature__icon--wrapper {
+        display: flex;
+        align-items: center;
+      }
+
+      /*
+      SECTION 2
+      */
+
+
+      .section2__row {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width:100%;
+        max-width: 1280px;
+        margin: 0 auto;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: 'Inter', system-ui;
+        color: #243e63;
+
+      }
+
+    
+
+   
