--- a/style.css
+++ b/style.css
@@ -208,6 +208,30 @@ SECTION 1
 
       }
 
-    
+     
+      .section2__img__wrapper {
+        width: 10%;
+
+        
+      }
+
+      .section2__description__wrapper{
+        width: 40%;
+
+      }
+
+      .section2__title__head {
+        font-size: 20px;
+
+      }
+
+      h4 {
+        font-size: 50px;
+      }
+
+      .section2__para {
+        font-size: 20px;
+      }
+      
 
    
