--- a/style.css
+++ b/style.css
@@ -210,13 +210,15 @@ SECTION 1
 
      
       .section2__img__wrapper {
-        width: 10%;
-
+        width: 50%;
+      }
+      .section2__img {
+        width: 85%;
         
       }
 
       .section2__description__wrapper{
-        width: 40%;
+        width: 50%;
 
       }
 
@@ -226,7 +228,7 @@ SECTION 1
       }
 
       h4 {
-        font-size: 50px;
+        font-size: 40px;
       }
 
       .section2__para {
